--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Petshop</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.0/css/all.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -60,6 +63,7 @@
             </div>
         </section>
         <section id="productos" style="text-align: center;">
+
             <div style="display: block;">
                 <img src="img/pawprint.svg" alt="" style="width: 100px;">
             </div>
@@ -69,7 +73,7 @@
             <div style="display: block; color: #666666; font-size: 20px;">
                 <label>Comederos - Accesorios - Comida</label>
             </div>
-            <div style="display: inline-flex;" class="list-products">
+            <div class="list-products">
                 <div>
                     <img src="img/juguete-churrasquito.png" alt="">
                     <label class="description">Juguete Churrasquito</label>
@@ -136,6 +140,7 @@
             </div>
         </div>
         <p class="footer-3">Todos los derechos reservados Front End</p>
+        <i class="fa fa-home"></i>
     </footer>
 </body>
 </html>
