--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </div>
         </div>
         <div>
-            <div class="menu-sas">
+            <div class="menu-accesos">
                 <div class="menu-left">
-                    <img src="img/logo/icono_001.png"/>
+                    <img src="img/logo/icono_1.svg"/>
                     <span class="logo-text1">Front</span>
                     <span class="logo-text2">Cat&Dog</span>
-                    <img src="img/logo/icono_002.png"/>
+                    <img src="img/logo/icono_2.svg"/>
                 </div>
                 <div class="menu-right">
                     <nav>
@@ -62,16 +62,15 @@
                 </div>
             </div>
         </section>
-        <section id="productos" style="text-align: center;">
-
-            <div style="display: block;">
-                <img src="img/pawprint.svg" alt="" style="width: 100px;">
+        <section id="productos">
+            <div>
+                <img id="img1" src="img/pawprint.svg" alt="">
             </div>
-            <div style="display: block;">
-                <label style="font-size: 60px; font-weight: 700; color: #3A2312;">Productos Destacados</label>
+            <div>
+                <h2 id="productodestacado">Productos Destacados</h2>
             </div>
-            <div style="display: block; color: #666666; font-size: 20px;">
-                <label>Comederos - Accesorios - Comida</label>
+            <div>
+                <h3>Comederos - Accesorios - Comida</h3>
             </div>
             <div class="list-products">
                 <div>
@@ -107,7 +106,7 @@
         <div class="footer-1">
             <div class="div-left">
                 <img src="img/emailtest.svg" alt="">
-                <a href="#" style="color: #FFFFFF; text-decoration: none; font-size: 25px; font-weight: 700;">&nbsp;&nbsp;Suscríbete para más novedades</a>
+                <a href="#">&nbsp;&nbsp;Suscríbete para más novedades</a>
             </div>
             <div class="div-right">
                 <input type="text" placeholder="Ingresá tu correo electronico">
@@ -133,14 +132,13 @@
                 </div>
             </div>
             <div class="div-right">
-                <img src="img/logo/icono_001.png"/>
+                <img src="img/logo/icono_1.svg"/>
                 <span class="logo-text1">Front</span>
                 <span class="logo-text2">Cat&Dog</span>
-                <img src="img/logo/icono_002.png"/>
+                <img src="img/logo/icono_2.svg"/>
             </div>
         </div>
         <p class="footer-3">Todos los derechos reservados Front End</p>
-        <i class="fa fa-home"></i>
     </footer>
 </body>
 </html>
